0.3. BufferedReader. [#252489 #348786]